Refatora backend: controllers, services, models e segurança